# Reasonix-computer-use

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  USER_GUIDE.md  install.bat  pyproject.toml  reasonix-computer-use.bat  reasonix-plugin.json
.claude-plugin/: plugin.json
.github/workflows/: capability-live.yml  release-windows.yml  tests.yml
agents/: app-explorer.md  desktop-automator.md  form-filler.md
capability_app/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  Reasonix.CapabilityApp.csproj
capability_tests/matrix/: future-linux.json  future-macos.json  windows-en-150.json  windows-zh-125.json
commands/: benchmark.md  computer-use.md  doctor.md  test.md  trace.md
docs/: CAPABILITY_TESTING.zh-CN.md
hooks/: __init__.py  after-action.bat  after-action.sh  before-action.bat  before-action.sh  route_guard.py  session-start.bat
installer/: reasonix-computer-use.iss
memory/: preferences.md  swlist.md
reasonix_computer_use/: __init__.py  __main__.py  app_discover.py  capability_runner.py  domain_tools.py  environment_setup.py  input_guard.py  keyboard.py  mcp_server.py  mouse.py  platform_backend.py  process_backend.py  process_broker.py  replay.py  runtime.py  screenshot.py  session_start.py  system_index.py  system_profile.py  text_vision.py  tools.py  trace.py  ui_tree.py  utils.py  window_backend.py  windows.py
scripts/: build_installer.ps1  build_release.ps1  generate_package_list.py
skills/: app-control.md  form-fill.md
skills/app-control/: SKILL.md
skills/spreadsheet-control/: SKILL.md
skills/spreadsheet-control/agents/: openai.yaml
skills/spreadsheet-control/references/: shortcuts.md
tests/: __init__.py  test_capabilities.py  test_plugin.py
