[project]
name = "reasonix-computer-use"
version = "0.8.0-alpha.8"
description = "Reasonix-native Windows computer use with UIA, local OCR and visual fallback"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
    "comtypes>=1.4.0",
    "rapidocr-onnxruntime>=1.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
reasonix-computer-use = "reasonix_computer_use.mcp_server:main"
