[project]
name = "reasonix-computer-use"
version = "0.8.0-beta.1"
description = "Reasonix-native computer use with pure visual perception (Windows/macOS/Linux)"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
    "mss>=9.0.0",
    "pynput>=1.7.7",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
reasonix-computer-use = "reasonix_computer_use.mcp_server:main"
reasonix-computer-capabilities = "reasonix_computer_use.capability_runner:main"
